# bioimageit-cid

./: README.md  setup.cfg
bioimageit_cid/: __init__.py  data_cid.py
