[metadata]
name = bioimageit-cid
version = 0.0.1
author = Sylvain Prigent
author_email = sylvain.prigent@inria.fr
license = GPL-2.0-only
url = https://github.com/bioimageit/bioimageit-cid
description = Enable using CID (SisNcom) as a backend database for BioImageIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: bioimageit_core
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
project_urls =
    Bug Tracker = https://github.com/bioimageit/bioimageit-cid/issues
    Documentation = https://github.com/bioimageit/bioimageit-cid#README.md
    Source Code = https://github.com/bioimageit/bioimageit-cid
    User Support = https://github.com/bioimageit/bioimageit-cid/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy
    requests>=2.27.1
    bioimageit_formats>=0.1.1
    bioimageit_core>=0.1.1


[options.entry_points] 
bioimageit.plugin = 
    bioimageit-cid = bioimageit_cid
